--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/starlight": "^0.34.3",
     "astro": "^5.6.1",
+    "astro-seo": "^0.8.4",
     "sharp": "^0.32.5",
     "starlight-giscus": "^0.6.1"
   }
