--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/starlight": "^0.34.3",
     "astro": "^5.6.1",
     "astro-seo": "^0.8.4",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "sharp": "^0.32.5",
     "starlight-giscus": "^0.6.1"
   }
